task 10 done + more test

--- a/StoreBaeltTicketLibrary”Tests/StoreBaeltTicketLibrary”Tests.csproj
+++ b/StoreBaeltTicketLibrary”Tests/StoreBaeltTicketLibrary”Tests.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <RootNamespace>StoreBaeltTicketLibrary_Tests</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
@@ -16,7 +17,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Oresundbron\Oresundbron.csproj" />
     <ProjectReference Include="..\StoreBaeltTicketLibrary”\StoreBaeltTicketLibrary”.csproj" />
     <ProjectReference Include="..\TicketSystemClassLibrary\TicketSystemClassLibrary.csproj" />
   </ItemGroup>
